# vibe-coding

chatting/chatting/: CLAUDE.md  (+2 more)
crawling/scraping/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
crawling/scraping/api/: main.py
crawling/scraping/api/routers/: naversports_kbo_client.py  naversports_kbo_router.py  naversports_kbo_schemas.py
crawling/scraping/docs/: 2026-03-21-claude-code-automation-report.md  NOTES.md
crawling/scraping/docs/api-analysis/: kbo-player.md  kbo-schedule.md  kbo-team.md  naversports-kbo-api.md
crawling/scraping/docs/feature/: naver-kbo-crawling.md  naver-kbo-record-api.md
crawling/scraping/docs/feature/kbo-crawling/: kbo-crawling.md
crawling/scraping/docs/project/: architecture.md  environments.md  known-issues.md
crawling/scraping/docs/rules/: project-rules.md  session-closing.md
crawling/scraping/docs/summary/: 2026-03-21-kbo-crawling-work-summary.md
crawling/scraping/docs/superpowers/plans/: 2026-03-19-python-crawling-implementation.md
crawling/scraping/docs/superpowers/specs/: 2026-03-19-java-crawling-design.md  2026-03-19-python-crawling-design.md
crawling/scraping/scrapying/: Dockerfile  scrapy.cfg
crawling/scraping/scrapying/scrapying/: constants.py  items.py  middlewares.py  pipelines.py  settings.py
crawling/scraping/scrapying/scrapying/spiders/: api_call.py  api_capture.py  html_crawl.py  kbo_hitter.py  kbo_pitcher.py  kbo_schedule.py  kbo_team_stats.py
crawling/scraping/scrapying/tests/: test_constants.py  test_items.py  test_pipelines.py
crawling/scraping/script/: test.sh
(+20 files in other folders)
